# game-protocol-cracker

./: .gitignore  LICENSE  README.md  protocol_cracker.py  pyproject.toml
src/game_protocol_cracker/: __init__.py  __main__.py  cli.py  crypto.py  decode.py  detect.py  export.py  frames.py  pcap.py  plugins.py
tests/: conftest.py  test_cli.py  test_crypto.py  test_decode.py  test_detect.py  test_export.py  test_frames.py  test_pcap.py  test_plugins.py
tests/fixtures/: generate_fixtures.py  sample.pcap
