[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-protocol-cracker"
version = "0.2.0"
description = "Analyze XOR rolling-key encrypted game protocols: auto-detect keys, decode frames, export patterns."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GabHST" }]
keywords = [
    "reverse-engineering",
    "security-research",
    "protocol-analysis",
    "xor",
    "pcap",
    "protobuf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "scapy>=2.5",
]

[project.optional-dependencies]
protobuf = ["bbpb>=1.4"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "bbpb>=1.4",
]

[project.scripts]
game-protocol-cracker = "game_protocol_cracker.cli:main"
gpc = "game_protocol_cracker.cli:main"

[project.urls]
Homepage = "https://github.com/GabHST/game-protocol-cracker"
Issues = "https://github.com/GabHST/game-protocol-cracker/issues"
Repository = "https://github.com/GabHST/game-protocol-cracker"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"game_protocol_cracker" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests requiring capture fixtures",
]

[tool.coverage.run]
source = ["game_protocol_cracker"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
